--- a/main.css
+++ b/main.css
@@ -78,12 +78,21 @@ nav p{
     margin: 0 0 30px!important;
     max-width: 557px!important;
 }
+
+span{
+    background: yellow;
+}
 .btn{
     background-color: black;
+    width: 180px;
+    height: 55px;
     color: white;
-    padding: 15px 40px;
     box-shadow: 0px 6px 36px 0px rgb(17 17 17/ 40);
     border-radius: 100em;
+    font-size: 15px;
+    position: relative;
+    bottom:-35px;
+    left: 4px;
 }
 
 main{
@@ -213,3 +222,195 @@ main{
     text-transform: uppercase;
     padding-left: 10px;
 }
+
+.sec_three{
+    margin-top: 350px;
+    background: rgb(240, 234, 234);
+}
+
+.sec_three h2{
+    font-family: "Poppins",Sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 5px;
+    color:black;
+    margin: 0 0 25px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.sec_three h3{
+    font-family: "Poppins",Sans-serif;
+    font-size: 50px;
+    font-weight: 500;
+    text-transform: capitalize;
+    line-height: 65px;
+    letter-spacing: -1px;
+    margin: 0 0 45px;
+    color:#4d0aa4;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.sec_three p{
+    font-family: "Poppins",Sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 25px;
+    max-width: 803px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    color:rgb(138, 129, 129);
+}
+
+.cardgrid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin-top: 120px;
+}
+
+.gridbox{
+    position: relative;
+    bottom: 150px;
+}
+
+.cardgridbox{
+    background: white;
+    width: 680px;
+    height: 280px;
+    margin-left:100px;
+    border-radius: 20px;
+}
+
+.cardgridbox h4{
+    text-align: left;
+    margin-left: 230px;
+    color:#4d0aa4;
+    font-size: 28px;
+    font-family: "Poppins",Sans-serif;
+    font-weight: 600;
+    line-height: 44px;
+    padding-top: 30px;
+    
+}
+
+.cardgridbox h5{
+    text-align: left;
+    margin-left: 230px;
+    font-size: 17px;
+    font-family: "Poppins",Sans-serif;
+    line-height: 27px;
+    font-weight: 400;
+    letter-spacing: 0;
+    font-style: normal;
+    margin-bottom: 15px;
+}
+
+.cardgridbox p{
+    text-align: left;
+    margin-left: 230px;
+    font-family:"Poppins",Sans-serif;
+    font-weight: 300;
+    line-height: 25px;
+    margin-top: 10px;
+    height: 80px;
+    color: rgb(138, 129, 129);
+}
+
+.dash{
+    position: relative;
+    bottom: 38px;
+}
+.cardgrid img{
+    position: relative;
+    bottom:350px;
+    left: 50px;
+    border-radius: 20px;
+}
+
+.footerflex{
+    display: flex;
+    height: 500px;
+    width: 100%;
+}
+
+.footerborder{
+    width: 25%;
+    padding: 25px;
+}
+
+.footerborder p{
+    line-height: 25px;
+    word-spacing: 5px;
+    font-family: "Poppins",Sans-serif;
+    font-size: 17px;
+    font-weight: 300;
+    margin-top: 25px;
+    color: gray;
+}
+
+.footerborder input{
+    border-radius: 50px;
+    padding: 20px;
+    width: 300px;
+    height: 10px;
+    margin-top: 40px;
+    border: 1px solid white;
+    background-color:rgb(230, 229, 229);
+    font-size: 17px;
+}
+
+button{
+    position: relative;
+    left: 260px;
+    bottom:45px;
+    width: 80px;
+    height: 40px;
+    border-radius: 20px;
+    border: 0;
+    padding: 10px;
+    background-color:#60339b;
+    color: white;
+    cursor: pointer;
+}
+
+.footerborder h2{
+    margin-top:5px;
+    color: rgb(68, 66, 66);
+    font-family: "Poppins",Sans-serif;
+    font-size: 25px;
+    font-weight: 550;
+    line-height: 57px;
+    letter-spacing: 1px;
+}
+
+hr{
+    border: 1.5px solid #4d0aa4;
+    width: 35px;
+    margin-top: 20px;
+    background-color: #4d0aa4;
+}
+ .footerp{
+    position: relative;
+    top: 30px;
+ }
+
+ .footerborder a{
+    text-decoration: none;
+    line-height: 35px;
+    position: relative;
+    top: 25px;
+    color: gray;
+ }
+
+ .footerp2{
+    text-align: center;
+    position: relative;
+    bottom: 110px;
+    color: gray;
+    font-size: 16px;
+ }
